minor updates to fix usability on mobile for docs

--- a/tests/dummy/app/components/window-pane/style.scss
+++ b/tests/dummy/app/components/window-pane/style.scss
@@ -68,7 +68,4 @@
   .window-pane.has-title .button {
     opacity: 0;
   }
-  .window-pane, .window-pane * {
-    font-size: 14px;
-  }
 }
