--- a/tests/dummy/app/index/style.scss
+++ b/tests/dummy/app/index/style.scss
@@ -18,6 +18,7 @@
       line-height: 1.7em;
       width: 500px;
       text-align: center;
+      font-weight: bold;
     }
 
     svg {
