--- a/tests/dummy/app/styles/colors.scss
+++ b/tests/dummy/app/styles/colors.scss
@@ -8,4 +8,4 @@ $blue: #308df5;
 $pink: #E63687;
 $transparent: rgba(0, 0, 0, 0);
 $primary-color: #3700FF;
-$secondary-color: #8200D1;
+$secondary-color: #0000D1;
