--- a/tests/dummy/app/styles/fonts.scss
+++ b/tests/dummy/app/styles/fonts.scss
@@ -8,3 +8,14 @@
   font-weight: normal;
   font-style: normal;
 }
+
+@font-face {
+  font-family: 'OfficeCodePro';
+  src: url('/assets/fonts/OfficeCodePro-Bold.eot');
+  src: url('/assets/fonts/OfficeCodePro-Bold.eot') format('embedded-opentype'),
+    url('/assets/fonts/OfficeCodePro-Bold.woff') format('woff'),
+    url('/assets/fonts/OfficeCodePro-Bold.ttf') format('truetype'),
+    url('/assets/fonts/OfficeCodePro-Bold.svg') format('svg');
+  font-weight: bold;
+  font-style: normal;
+}
