--- a/tests/dummy/app/styles/grid.scss
+++ b/tests/dummy/app/styles/grid.scss
@@ -3,5 +3,5 @@
   max-width: 800px;
   margin: 0 auto;
   display: block;
-  padding-bottom: 50px;
+  padding-bottom: 40px;
 }
